--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
         <script src="js/lib/modernizr-2.6.2.min.js"></script>
     </head>
     <body>
+        <ul id= "songs"></ul>
+        <div id = "container"></div>
         <script src="js/lib/jquery-min.js"></script>
         <script src="js/lib/underscore-min.js"></script>
         <script src="js/lib/backbone-min.js"></script>
-        <script src="js/main_section2.js"></script>
+        <script src="js/main.js"></script>
     </body>
 </html>
