logging change function to console

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <script src="js/lib/backbone-min.js"></script>
         <script id = "vehicleTemplate" type="text/html">
              <%= registrationNumber %>
-            <button>Delete</button>
+            <button id = "button">Delete</button>
                 <span data-color= "green"></span>
             
         </script>
