removing elements on click from dom

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <script src="js/lib/modernizr-2.6.2.min.js"></script>
     </head>
     <body>
-        <ul id= "songs"></ul>
+        <ul id= "carsList"></ul>
 
         <div id = "container"></div>
         <script src="js/lib/jquery-min.js"></script>
