new example project

--- a/event_aggregator/index.html
+++ b/event_aggregator/index.html
@@ -14,18 +14,15 @@
         <script src="js/lib/modernizr-2.6.2.min.js"></script>
     </head>
     <body>
-        <ul id= "carsList"></ul>
-
-        <div id = "container"></div>
-        <script src="js/lib/jquery-min.js"></script>
-        <script src="js/lib/underscore-min.js"></script>
-        <script src="js/lib/backbone-min.js"></script>
-        <script id = "vehicleTemplate" type="text/html">
-             <%= registrationNumber %>
-            <button id = "button">Delete</button>
-                <span data-color= "green"></span>
-            
-        </script>
-        <script src="js/event_aggregator_to_coor_multi_events.js"></script>
+        <div id="container">
+            <div id="venues-container"></div>
+            <div id="map-container">
+                <span id="venue-name"></span>
+            </div>
+        </div>
+        <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+        <script src="http://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.7.0/underscore-min.js"></script>
+        <script src="http://cdnjs.cloudflare.com/ajax/libs/backbone.js/1.1.2/backbone-min.js"></script>
+        <script src="js/main.js"></script>
     </body>
 </html>
